Fix button on mobile in navbar

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,7 +16,6 @@ button {
   color: $white;
   margin: 1rem;
   max-width: 80vw;
-  min-width: 93px;
   margin: 3rem 0 0 0;
   display: flex;
   align-items: center;
@@ -72,6 +71,8 @@ button {
 
   .link {
     padding: $base-padding;
+    width: fit-content;
+    margin: auto; 
   }
 
   .visible {
